# Codexzier_Versatron

./: AppBleScanner.cpp  AppBleScanner.h  AppBleScannerResultList.cpp  AppBleScannerResultList.h  AppCameraOnDisplay.cpp  AppCameraOnDisplay.h  AppCameraRun.cpp  AppCameraRun.h  AppMenu.cpp  AppMenu.h  AppPictureViewer.cpp  AppPictureViewer.h  AppRadioRadar.cpp  AppRadioRadar.h  AppTorchRun.cpp  AppTorchRun.h  AppWlanScanner.cpp  AppWlanScanner.h  AppWlanScannerResultList.cpp  AppWlanScannerResultList.h  AppWorkout.cpp  AppWorkout.h  AppWorkoutRun.cpp  AppWorkoutRun.h  AppWorkoutSetup.cpp  AppWorkoutSetup.h  BaseDrawable.h  CMakeLists.txt  Codexzier_Versatron.cpp  Codexzier_Versatron.h  ControlRingSegmentDisplay.cpp  ControlRingSegmentDisplay.h  IDrawable.h  MenuArea.cpp  MenuArea.h  MenuPaging.cpp  MenuPaging.h  README.md  RingSegmentDisplay.cpp  RingSegmentDisplay.h  (+6 more)
